--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -6,6 +6,7 @@
     android:background="#ffffff">
 
     <com.cpxiao.blackandwhite.views.GameView
+        android:id="@+id/game_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
